removed dislay flex on btn, messes with webkit text-alignment. Header leadtext margin fix for mobile/iphone

--- a/css/main.css
+++ b/css/main.css
@@ -717,11 +717,15 @@ a {
   text-decoration: none; }
 
 .btn {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  flex-direction: row;
+  display: block;
+  margin-bottom: 0;
   background-color: transparent;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  white-space: nowrap;
   border-radius: 6px;
   border: 2px white solid;
   border-bottom: 5px white solid;
@@ -729,7 +733,6 @@ a {
   font-weight: 400;
   font-size: 1.125rem;
   padding: 0.7rem 1rem;
-  text-align: center;
   text-transform: uppercase;
   width: 18rem; }
   .btn:focus, .btn:active:focus {
@@ -901,6 +904,12 @@ header {
 .header-diagonal-bottom {
   width: 100%;
   height: 28%; }
+
+.hem .header-diagonal-bottom p {
+  margin-top: -2rem; }
+  @media screen and (min-width: 480px) {
+    .hem .header-diagonal-bottom p {
+      margin-top: 0.75rem; } }
 
 #large-flash {
   width: 57px;
