--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,17 +1,22 @@
 //Buttons
 .btn {
-    @include flex-center;
-    //margin: $main-margin;
+    //@include flex-center;
+    display: block;
+    margin-bottom: 0; // For input.btn
     background-color: transparent;
+    text-align: center;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+    white-space: nowrap;
     border-radius: $border-radius-base;
     border: $btn-border-width white solid;
     border-bottom: $btn-border-bottom-width white solid;
     color: white;
-    //font-family: 'open_sansregular';
     font-weight: 400;
     font-size: 1.125rem;
     padding: 0.7rem $main-padding;
-    text-align: center;
     text-transform: uppercase;
     width: 18rem;
     &,
